--- a/MaaS/client/css/main.css
+++ b/MaaS/client/css/main.css
@@ -48,8 +48,15 @@ body {
     box-shadow: lightgray 1px 1px 4px;
 }
 
-.container, #home-container{
+#home-container {
+    width: 50%;
+}
+
+.container {
     width: 65%;
+}
+
+.container, #home-container{
     min-height: 22em;
     margin-left: 23%;
     padding: 2em;
@@ -863,6 +870,10 @@ input {
 }
 
 /*------------------------------------------------- LOGIN --------------------------------------------------------------------*/
+.login-input {
+    width: 15em;
+}
+
 #login-help {
     font-size: 0.8em;
     padding: 1em 0em 0.5em 0em;
@@ -1025,6 +1036,12 @@ input {
     margin: auto;
     margin-left: 1%;
     text-align: left;
+}
+
+#user-profile {
+    background-color: #E8F0F0;
+    margin-top: 0.1em;
+    /*#E4EDEE;*/
 }
 
 /*------------------------------------------------ DELETE USER, DELETE COMPANY, CHANGE ROLE --------------------------------------------------------------*/
