--- a/MaaS/client/css/main.css
+++ b/MaaS/client/css/main.css
@@ -1003,11 +1003,12 @@ input {
         -moz-border-radius: 5px;
         -webkit-border-radius: 5px;
         border-radius: 5px;
+        text-align: left;
 }
 
-#editorContainer{
+#editorContainerPreview{
     position: relative;
-    width: 50%;
+    width: 70%;
     min-height: 20em;
     margin:auto;
     -moz-border-radius: 5px;
@@ -1040,8 +1041,7 @@ input {
 
 #user-profile {
     background-color: #E8F0F0;
-    margin-top: 0.1em;
-    /*#E4EDEE;*/
+    margin-top: 0.2em;
 }
 
 /*------------------------------------------------ DELETE USER, DELETE COMPANY, CHANGE ROLE --------------------------------------------------------------*/
