iniziato componente di gestione DSL

--- a/MaaS/client/css/main.css
+++ b/MaaS/client/css/main.css
@@ -697,6 +697,7 @@ input {
 
 #sidebar a:hover {
     color: lightgrey;
+    cursor: pointer;
 }
 
 /*-------------------------------------------------- SLIDER -----------------------------------------------------------------------*/
